--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,6 +14,12 @@
           <li class='nav-item'>
             <a routerLink='/contact' routerLinkActive='active'>Liên hệ</a>
           </li>
+          <li class='nav-item'>
+            <a routerLink='/infor' routerLinkActive='active'>Thông tin</a>
+          </li>
+          <li class='nav-item'>
+            <a routerLink='/user-list' routerLinkActive='active'>Người dùng</a>
+          </li>
         </ul>
       </nav>
       <div class='user-actions'>
